--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   ffi: ^2.0.1
   flutter_secure_storage: ^8.0.0
-  shared_preferences: ^2.0.15
+#  shared_preferences: ^2.2.0
   archive: ^3.1.6
 #  mobx: ^2.0.7
   cw_core:
