--- a/cw_shared_external/pubspec.yaml
+++ b/cw_shared_external/pubspec.yaml
@@ -24,3 +24,5 @@ flutter:
         pluginClass: CwSharedExternalPlugin
       ios:
         pluginClass: CwSharedExternalPlugin
+      macos:
+        pluginClass: CwSharedExternalPlugin
