--- a/cw_monero/pubspec.yaml
+++ b/cw_monero/pubspec.yaml
@@ -40,8 +40,15 @@ flutter:
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   plugin:
-    androidPackage: com.cakewallet.monero
-    pluginClass: CwMoneroPlugin
+    platforms:
+      android:
+        package: com.cakewallet.monero
+        pluginClass: CwMoneroPlugin
+      ios:
+        pluginClass: CwMoneroPlugin
+
+      macos:
+        pluginClass: CwMoneroPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
