--- a/cw_wownero/pubspec.yaml
+++ b/cw_wownero/pubspec.yaml
@@ -47,6 +47,10 @@ flutter:
       ios:
         pluginClass: CwWowneroPlugin
 
+      macos:
+        pluginClass: CwWowneroPlugin
+
+
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
