--- a/cw_monero/pubspec.yaml
+++ b/cw_monero/pubspec.yaml
@@ -23,8 +23,8 @@ dependencies:
   collection: ^1.15.0-nullsafety.4
   monero:
     git:
-      url: https://git.mrcyjanek.net/mrcyjanek/monero.dart
-      ref: 6a17a405a1a260fa228b2f4fc94044088a4335ac
+      url: https://github.com/mrcyjanek/monero.dart
+      ref: d46753eca865e9e56c2f0ef6fe485c42e11982c5
 
 dev_dependencies:
   flutter_test:
