--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,7 +26,7 @@ apply plugin: "kotlin-android"
 
 android {
     if (project.android.hasProperty("namespace")) {
-        namespace = "com.exampleplol.dummy_plugin"
+        namespace = "com.example.flutter_libmonero"
     }
 
     compileSdk = 34
