--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,4 @@ lib/git_versions.dart
 # could maybe be unignored in the future?
 linux/monero_libwallet2_api_c.so
 linux/wownero_libwallet2_api_c.so
+android/src/main/jniLibs/**
