--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -17,35 +17,11 @@ GeneratedPluginRegistrant.m
 *.pbxuser
 *.mode1v3
 *.mode2v3
-*.moved-aside
-*.pbxuser
 *.perspectivev3
-**/*sync/
-.sconsign.dblite
-.tags*
-**/.vagrant/
-**/DerivedData/
-Icon?
-**/Pods/
-**/.symlinks/
-profile
-xcuserdata
-**/.generated/
-Flutter/App.framework
-Flutter/Flutter.framework
-Flutter/Flutter.podspec
-Flutter/Generated.xcconfig
-Flutter/app.flx
-Flutter/app.zip
-Flutter/flutter_assets/
-Flutter/flutter_export_environment.sh
-ServiceDefinitions.json
-Runner/GeneratedPluginRegistrant.*
 
 !default.pbxuser
 !default.mode1v3
 !default.mode2v3
-!default.pbxuser
 !default.perspectivev3
 
 xcuserdata
@@ -58,42 +34,7 @@ Icon?
 .tags*
 
 /Flutter/Generated.xcconfig
+/Flutter/ephemeral/
 /Flutter/flutter_export_environment.sh
 
-#.idea/
-#.vagrant/
-#.sconsign.dblite
-#.svn/
-#
-#.DS_Store
-#*.swp
-#profile
-#
-#DerivedData/
-#build/
-#GeneratedPluginRegistrant.h
-#GeneratedPluginRegistrant.m
-#
-#.generated/
-#
-#*.pbxuser
-#*.mode1v3
-#*.mode2v3
-#*.perspectivev3
-#
-#!default.pbxuser
-#!default.mode1v3
-#!default.mode2v3
-#!default.perspectivev3
-#
-#xcuserdata
-#
-#*.moved-aside
-#
-#*.pyc
-#*sync/
-#Icon?
-#.tags*
-#
-#/Flutter/Generated.xcconfig
-#/Flutter/flutter_export_environment.sh
+Frameworks
